# gfx-perps-python-sdk

./: .gitignore  LICENSE  README.md  project.toml  pyproject.toml  requirements.txt  setup.py  subscribe_accounts.py  test_create_trg.py  test_perp.py  test_product.py  test_subscribe_accounts.py  test_wallet_subscribe.py  utils.py
gfx_perp_sdk/: __init__.py  perp.py  product.py  trader.py  utils.py
gfx_perp_sdk/agnostic/: EventQueue.py  Slabs.py  __init__.py
gfx_perp_sdk/constant_instructions/: instructions.py
gfx_perp_sdk/constants/: perps_constants.py
gfx_perp_sdk/instructions/: cancel_order.py  choose_successor.py  claim_authority.py  clear_expired_orderbook.py  close_trader_risk_group.py  consume_orderbook_events.py  deposit_funds.py  initialize_combo.py  initialize_market_product.py  initialize_market_product_group.py  initialize_trader_risk_group.py  instruction_tag.py  new_order.py  remove_market_product.py  sweep_fees.py  transfer_full_position.py  update_product_funding.py  update_trader_funding.py  withdraw_funds.py
gfx_perp_sdk/types/: average_position.py  call_back_info.py  deposit_funds_params.py  leg.py  market_product_group.py  new_order_params.py  open_orders.py  open_orders_metadata.py  open_orders_node.py  outright.py  price_ewma.py  product.py  product_array.py  product_metadata.py  social_loss.py  trade_history.py  trader_fee_params.py  trader_fees.py  trader_position.py  trader_risk_group.py  withdraw_funds_params.py
gfx_perps_sdk/: Slabs.py  perp.py  product.py  trader.py
gfx_perps_sdk/constants/: perps_constants.py
(+20 files in other folders)
